--- a/tumakov14/tumakov14.csproj
+++ b/tumakov14/tumakov14.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bank1.cs" />
+    <Compile Include="BankTransaction.cs" />
+    <Compile Include="DeveloperInfoAttribute.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RationalNumber.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
