--- a/tumakov14/tumakov14.csproj
+++ b/tumakov14/tumakov14.csproj
@@ -43,9 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountInfoAttribute.cs" />
     <Compile Include="Bank1.cs" />
     <Compile Include="BankTransaction.cs" />
-    <Compile Include="DeveloperInfoAttribute.cs" />
+    <Compile Include="DeveloperInfoAttribute1.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RationalNumber.cs" />
